--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,20 @@
     <link rel="stylesheet" href="style.css">
     <!-- Google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header class="banner">
-        <h1>Hello world!!</h1>
+    <header>
+        <div id="banner">
+            <h2>We all for one and One for all.</h2>
+            <p>Ready to get started? Join thousands of others today. <br> Come forward and help other to make a happy
+                world.</p>
+            <a href="http://google.com">Donate Now</a>
+        </div>
+
     </header>
 </body>
+
 </html>
