donar today part is complete

--- a/index.html
+++ b/index.html
@@ -20,10 +20,41 @@
             <h2>We all for one and One for all.</h2>
             <p>Ready to get started? Join thousands of others today. <br> Come forward and help other to make a happy
                 world.</p>
-            <a href="http://google.com">Donate Now</a>
+            <a href="http://google.com" class="btn">Donate Now</a>
         </div>
 
     </header>
+
+    <!-- Donate Today start -->
+    <section>
+        <h2 style="text-align: center;">Donate Today</h2>
+        <p style="text-align: center;"> Be the first fundraiser in your community. </p>
+        <div class="money">
+            <div class="money-1">
+                <h3>$100</h3>
+            </div>
+            <div id="money-2">
+                <h3>$300</h3>
+            </div>
+            <div class="money-1" >
+                <h3>$500</h3>
+            </div>
+            <div class="money-1">
+                <h3>$1000</h3>
+            </div>
+            <div class="money-1">
+                <h3>$5000</h3>
+            </div>
+        </div>
+    
+        <div id="donate">
+            <input type="text" name="" id="" placeholder="Other amount($USD)">
+            <br>
+    
+        <a style="left: 50%;" href="http://google.com" class="btn">Donate Now</a>
+        </div>
+  
+    </section>
 </body>
 
 </html>
