donate plan complete

--- a/index.html
+++ b/index.html
@@ -55,6 +55,29 @@
         </div>
   
     </section>
+    <!-- Our donate plan start -->
+    <section>
+        <h2 style="text-align: center;">Our Donate Plan</h2>
+        <p style="text-align: center;">There’s a part of every one of us that dreams of a better world. <br> That spark of inspiration to help a person, <br> fix a neighborhood, or even change a nation. </p>
+
+        <div class="money">
+        <div id="donate-plan">
+            <img src="images/family.png" alt="" width="40px">
+            <h3>Food for family</h3>
+            <p>We help many people by providing nutritious food <br> and doing seminars about which type of foods should take. <br> we always try to aware them about sound health.</p>
+        </div>
+        <div id="donate-plan1">
+            <img src="images/shelter.png" alt="" width="40px">
+            <h3>Shelter for family</h3>
+            <p>Many people live their life beside road or tenement house. <br> sometimes, cars go on their body.we make <br> safe houses for them so that they can lead a <br> secure life with their family. </p>
+        </div>
+        <div id="donate-plan2">
+            <img src="images/child.png" alt="" width="40px">
+            <h3>Education for child</h3>
+            <p>Education is very important to grow a nation. <br> In our society, many child can't get <br> the facility of reading.They are engaged <br> with work for their livelihood.we reached <br>  out them and try to give them proper facilities of study. </p>
+        </div>
+        </div>
+    </section>
 </body>
 
 </html>
