extra part done

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <!-- Donate Today start -->
     <section>
-        <h2 style="text-align: center;">Donate Today</h2>
-        <p style="text-align: center;"> Be the first fundraiser in your community. </p>
+        <h2>Donate Today</h2>
+        <p> Be the first fundraiser in your community. </p>
         <div class="money">
             <div class="money-1">
                 <h3>$100</h3>
@@ -36,7 +36,7 @@
             <div id="money-2">
                 <h3>$300</h3>
             </div>
-            <div class="money-1" >
+            <div class="money-1">
                 <h3>$500</h3>
             </div>
             <div class="money-1">
@@ -46,36 +46,83 @@
                 <h3>$5000</h3>
             </div>
         </div>
-    
+
         <div id="donate">
             <input type="text" name="" id="" placeholder="Other amount($USD)">
             <br>
-    
-        <a style="left: 50%;" href="http://google.com" class="btn">Donate Now</a>
+
+            <a style="left: 50%;" href="http://google.com" class="btn">Donate Now</a>
         </div>
-  
+
     </section>
     <!-- Our donate plan start -->
     <section>
-        <h2 style="text-align: center;">Our Donate Plan</h2>
-        <p style="text-align: center;">There’s a part of every one of us that dreams of a better world. <br> That spark of inspiration to help a person, <br> fix a neighborhood, or even change a nation. </p>
+        <h2>Our Donate Plan</h2>
+        <p>There’s a part of every one of us that dreams of a better world. <br> That spark
+            of inspiration to help a person, <br> fix a neighborhood, or even change a nation. </p>
 
         <div class="money">
-        <div id="donate-plan">
-            <img src="images/family.png" alt="" width="40px">
-            <h3>Food for family</h3>
-            <p>We help many people by providing nutritious food <br> and doing seminars about which type of foods should take. <br> we always try to aware them about sound health.</p>
+            <div id="donate-plan">
+                <img src="images/family.png" alt="" width="40px">
+                <h3>Food for family</h3>
+                <p>We help many people by providing nutritious food <br> and doing seminars about which type of foods
+                    should take. <br> we always try to aware them about sound health.</p>
+            </div>
+            <div id="donate-plan1">
+                <img src="images/shelter.png" alt="" width="40px">
+                <h3>Shelter for family</h3>
+                <p>Many people live their life beside road or tenement house. <br> sometimes, cars go on their body.we
+                    make <br> safe houses for them so that they can lead a <br> secure life with their family. </p>
+            </div>
+            <div id="donate-plan2">
+                <img src="images/child.png" alt="" width="40px">
+                <h3>Education for child</h3>
+                <p>Education is very important to grow a nation. <br> In our society, many child can't get <br> the
+                    facility of reading.They are engaged <br> with work for their livelihood.we reached <br> out them
+                    and try to give them proper facilities of study. </p>
+            </div>
         </div>
-        <div id="donate-plan1">
-            <img src="images/shelter.png" alt="" width="40px">
-            <h3>Shelter for family</h3>
-            <p>Many people live their life beside road or tenement house. <br> sometimes, cars go on their body.we make <br> safe houses for them so that they can lead a <br> secure life with their family. </p>
-        </div>
-        <div id="donate-plan2">
-            <img src="images/child.png" alt="" width="40px">
-            <h3>Education for child</h3>
-            <p>Education is very important to grow a nation. <br> In our society, many child can't get <br> the facility of reading.They are engaged <br> with work for their livelihood.we reached <br>  out them and try to give them proper facilities of study. </p>
-        </div>
+    </section>
+
+    <!-- Extra Section -->
+    <section>
+        <h2>Our Mission and Vision</h2>
+        <div class="money">
+            <div id="mission">
+                <h3 style="text-align: center;">MISSION STATEMENT</h3>
+                <p>
+                    Our mission is to link the church of the First World with the church of the Third World in a manner
+                    that
+                    helps both the materially poor and the poor in spirit.
+
+                    The materially poor are served by local churches, clergy and lay leaders who have been empowered and
+                    supplied with goods by Food For The Poor.
+
+                    The poor in spirit are renewed by their relationship with and service to the poor through our direct
+                    ministry of teaching, encouragement and prayer.
+
+                    Ultimately, we seek to bring both benefactors and recipients to a closer union with our Lord.
+                </p>
+            </div>
+            <div>
+                <img src="images/extra.png" alt="" srcset="">
+            </div>
+            <div id="vission">
+                <h3 style="text-align: center;">VISSION STATEMENT</h3>
+                <p>
+                    Food For The Poor is God’s instrument to help the materially poor and to renew the poor in spirit.
+
+                    Our ministry is a reflection of our Lord’s unconditional love – a love that surrenders all, that
+                    inspires trust and faith, and that embraces all people, regardless of race, status or creed.
+
+                    It is also shaped by our belief that Christ is alive and can be served directly by serving those in
+                    greatest need. (Matthew 25:40)
+
+                    For guidance and to maintain the purity of our mission, we stress the need for regular prayer.
+
+                    Through surrender, service and prayer, we seek a closer union with our Lord.
+                </p>
+            </div>
         </div>
     </section>
 </body>
