our updates part complete

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="money">
             <div id="donate-plan">
-                <img src="images/family.png" alt="" width="40px">
+                <img src="images/food.png" alt="" width="40px">
                 <h3>Food for family</h3>
                 <p>We help many people by providing nutritious food <br> and doing seminars about which type of foods
                     should take. <br> we always try to aware them about sound health.</p>
@@ -124,6 +124,16 @@
                 </p>
             </div>
         </div>
+    </section>
+
+    <!-- Get our updates -->
+    <section>
+        <h2>Get Our Updates</h2>
+        <p>If you want to connected with us ,please fill <br> the above form with your required information.</p>
+        <form>
+            <input type="email" name="" placeholder="Email" id="">
+            <button class="btn" type="submit">subscribe</button>
+        </form>
     </section>
 </body>
 
