footer and others all completed

--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
             <button class="btn" type="submit">subscribe</button>
         </form>
     </section>
+    <!-- At last Footer mama chole eshace -->
+    <footer>
+        <h2>Be Humble</h2>
+        <p>Copy right act reserved by ©-2022</p>
+    </footer>
 </body>
 
 </html>
